# egui_widget_ext

./: Cargo.toml
examples/: README.md  alert_manager.rs  alerts.rs  toast_manager.rs  toasts.rs  toggle_switch.rs
src/: alert.rs  alert_manager.rs  lib.rs  toast.rs  toast_manager.rs
