[package]
name = "egui_widget_ext"
version = "0.1.0"
edition = "2024"
authors = ["Blackberry Float"]
description = "Set of useful generic EGUI widgets."
repository = "https://github.com/blackberryfloat/egui_widget_ext"
readme ="./README.md"
license = "MIT/Apache-2.0"
keywords = ["egui", "widget", "gui", "ui", "extension"]
documentation = "https://docs.rs/egui_widget_ext"

[dependencies]
egui = "0.32"
chrono = { version = "0.4", features = ["wasmbind", "serde"] }

[features]
toggle_switch=[]
alert=[]
alert_manager=["alert"]
toast=[]
toast_manager=["toast"]
all = ["alert_manager", "alert", "toggle_switch", "toast_manager", "toast"]

[dev-dependencies]
eframe = "0.32"

[package.metadata.docs.rs]
features = ["all"]
