[package]
name = "egui_widget_ext"
version = "0.1.0"
edition = "2024"
authors = ["Blackberry Float"]
description = "Set of useful generic EGUI widgets."
repository = "https://github.com/blackberryfloat/egui_widget_ext"
readme ="./README.md"
license = "MIT/Apache-2.0"
keywords = ["egui", "widget", "gui", "ui", "extension"]
documentation = "https://docs.rs/egui_widget_ext"

[dependencies]
egui = "0.35"
chrono = { version = "0.4", features = ["wasmbind", "serde"] }

[features]
toggle_switch=[]
alert=[]
alert_manager=["alert"]
toast=[]
toast_manager=["toast"]
all = ["alert_manager", "alert", "toggle_switch", "toast_manager", "toast"]

[[example]]
name = "alerts"
required-features = ["alert"]

[[example]]
name = "alert_manager"
required-features = ["alert_manager"]

[[example]]
name = "toggle_switch"
required-features = ["toggle_switch"]

[[example]]
name = "toasts"
required-features = ["toast"]

[[example]]
name = "toast_manager"
required-features = ["toast_manager"]

[dev-dependencies]
eframe = "0.35"

[package.metadata.docs.rs]
features = ["all"]
